# PassPhraseX

./: .dockerignore  Readme.md
.github/workflows/: api.yml  cli.yml  extension.yaml
api/: Cargo.toml  Dockerfile  Readme.md  compose.yaml  nginx.conf
api/nginx/: Dockerfile  nginx.conf  startup.sh
api/src/: main.rs
api/src/error/: common.rs
api/src/handlers/: common.rs  mod.rs  password.rs  user.rs
api/src/handlers/middleware/: auth.rs
api/src/model/: common.rs  mod.rs  password.rs  user.rs
api/src/service/: mod.rs  password.rs  user.rs
cli/: Cargo.toml  Readme.md
cli/src/: api.rs  cryptography.rs  file.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/api/: mod.rs  time.rs
common/src/crypto/: asymmetric.rs  common.rs  mod.rs  symmetric.rs
common/src/generator/: dist.rs  mod.rs
common/src/model/: mod.rs  password.rs  user.rs
extension/: .justfile  Cargo.toml  manifest.json
extension/background-script/: Cargo.toml  index.js
extension/background-script/src/: app.rs  lib.rs  storage.rs
extension/foreground-script/: Cargo.toml  index.js  style.css
extension/foreground-script/src/: lib.rs
extension/messages/: Cargo.toml
extension/messages/src/: lib.rs
extension/options/: Cargo.toml  index.html  index.js
extension/popup/: Cargo.toml  index.css  index.html  index.js  main.css  tailwind.config.js
extension/popup/src/: lib.rs
extension/popup/src/api/: mod.rs
extension/popup/src/components/: add.rs  edit.rs  input.rs  list.rs  login.rs  mod.rs  nav.rs  register.rs  seed_phrase.rs  unlock.rs
extension/popup/src/components/helpers/: button.rs  input.rs
extension/popup/src/pages/: locked.rs  logged_out.rs  mod.rs  unlocked.rs
