[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
mongodb = "2.5.0"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
passphrasex_common = { path = "../common" }
thiserror = "1.0.40"
anyhow = "1.0.71"
futures-util = "0.3.28"


