[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs2 = "2.5.5"
clap = { version = "4.2.7", features = ["derive"] }
common = { path = "../common" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio = { version ="1.28.1", features = ["macros", "rt-multi-thread"] }
