[package]
name = "passphrasex"
version = "0.1.0"
edition = "2021"
description = "A command line password manager, focused on privacy & security"
license = "GPL-3.0"
authors = ["PassPhraseX"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs2 = "2.5.5"
clap = { version = "4.2.7", features = ["derive"] }
passphrasex_common = { version = "0.1.0", path = "../common" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
