[package]
name = "passphrasex_common"
version = "0.2.0"
edition = "2021"
description = "Common code for PassPhraseX"
license = "GPL-3.0"
authors = ["PassPhraseX"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto_box = "0.8.2"
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
getrandom = { version = "0.2", features = ["js"] }
bip32 = {version = "0.5.0", features = ["alloc", "secp256k1"]}
serde = { version = "1.0.163", features = ["serde_derive"] }
base64 = "0.22.1"
rust-argon2 = "2.1.0"
aes = "0.8.2"
rand = "0.8.5"
anyhow = "1.0.71"
reqwest = { version = "0.12.4", features = ["json"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
rsa = { version = "0.9.6", features = ["pem"] }
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }
rand_chacha = { version = "0.3.1" }



